--- a/index.html
+++ b/index.html
@@ -165,6 +165,10 @@
                 grid-template-columns: 1fr 1fr;
             }
         }
+		
+		.right-wrong-image {
+            width: 30px;
+        }
     </style>
 </head>
 
