Show restart button at the end of the game

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <div class="puzzle-image-text comment-on-answer">
                     <span v-html="commentToShow"></span>
                     <div>
-                        <button class="next-button" :class="{ 'show': isAnswered, 'hide': !isAnswered }" @click="continueAfterAnswer()">Tovább ({{ timeoutSeconds }})</button>
+                        <button class="next-button" :class="{ 'show': isAnswered, 'hide': !isAnswered }" @click="continueAfterAnswer()">{{ nextButtonText }}</button>
                     </div>
                 </div>
                 <i><small><br />Forrás: <a v-bind:href="puzzle.ImageSource" target="_blank">{{ imageSource }}</a></small></i>
