Fix boilerplate text

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <p class="game-title">{{ gameTitle }}</p>
             <div>{{ actualIndex }}/{{ totalPuzzleItemsCount }}</div>
             <div class="puzzle-image-container">
-                <img class="puzzle-image" v-bind:src="puzzleImage" :class="{ 'overlay': isAnswered }" alt="Mi ez a hal?" />
+                <img class="puzzle-image" v-bind:src="puzzleImage" :class="{ 'overlay': isAnswered }" alt="Mi ez a gomba?" />
                 <div class="puzzle-image-text comment-on-answer">
                     <span v-html="commentToShow"></span>
                     <div>
