--- a/index.html
+++ b/index.html
@@ -208,19 +208,21 @@
 
         <div class="puzzle-container">
             <p class="game-title">{{ gameTitle }}</p>
-            <div>{{ actualIndex }}/{{ totalPuzzleItemsCount }}</div>
+            <div :class="{ 'show': !isEndOfGame, 'hide': isEndOfGame }">{{ actualIndex }}/{{ totalPuzzleItemsCount }}</div>
             <div class="puzzle-image-container">
                 <img class="puzzle-image" v-bind:src="puzzleImage" :class="{ 'overlay': isAnswered }" alt="Mi ez a gomba?" />
                 <div class="puzzle-image-text comment-on-answer">
                     <span v-html="commentToShow"></span>
                     <div>
                         <button class="bootstrap-button next-button " :class="{ 'show': isAnswered, 'hide': !isAnswered }" @click="continueAfterAnswer()">{{ nextButtonText }}</button>
+                        <button class="bootstrap-button" :class="{ 'show': isEndOfGame, 'hide': !isEndOfGame }" @click="reset10()">Új játék (10 kérdés)</button>
+                        <button class="bootstrap-button" :class="{ 'show': isEndOfGame, 'hide': !isEndOfGame }" @click="resetAll()">Új játék (összes faj)</button>
                     </div>
                 </div>
                 <i><small><br />Forrás: <a v-bind:href="puzzle.ImageSource" target="_blank">{{ imageSource }}</a></small></i>
             </div>
 
-            <div class="choice-container">
+            <div class="choice-container" :class="{ 'show': !isEndOfGame, 'hide': isEndOfGame }">
                 <div class="choice">
                     <button :class="{ 'right-selected': choiceIsRight[0], 'wrong-selected': choiceIsWrong[0] }" class="choice bootstrap-button" @click="answered(choices[0])">{{ choices[0] }}</button>
                 </div>
