--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                         </div>
                     </div>
 
-                    <button class="right" @click="slideImageRight()">&gt;</button>
+                    <button class="right" @click="slideImageRight()" :class="{ 'show': hasMoreImagesRight, 'hide': !hasMoreImagesRight }">&gt;</button>
 
                 </div>
 
