Add visitor counter

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 
 
             </div>
-            
+
 
             <div class="choice-container" :class="{ 'show': !isEndOfGame, 'hide': isEndOfGame }">
                 <div class="choice">
@@ -366,6 +366,9 @@
 
     <script type="module" src="./selectNameByImage.js"></script>
 
+    <a href='http://www.freevisitorcounters.com'>Freevisitorcounters</a>
+    <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=3d52bcb9540e6b8b3049a1a51e514ac70e8666ea'></script>
+    <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1266216/t/4"></script>
 </body>
 
 </html>
