Add Open Graph meta tags

--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!doctype html>
 <html lang=en>
 <head>
-    <!-- Cookie consent -->
-    <!--<script type="text/javascript" data-cmp-ab="1" src="https://cdn.consentmanager.net/delivery/autoblocking/228e44cfc1ff5.js" data-cmp-host="b.delivery.consentmanager.net" data-cmp-cdn="cdn.consentmanager.net" data-cmp-codesrc="16"></script>-->
-    
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-QETEXVVSYM"></script>
     <script>
@@ -16,6 +14,11 @@
 
     <meta charset=utf-8>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta name="og:title" content="Gombakvíz!" />
+    <meta name="og:type" content="website" />
+    <meta name="og:url" content="https://ignotus87.github.io/mushroom-quiz/" />
+    <meta name="og:image" content="https://ignotus87.github.io/mushroom-quiz/SpeciesImages/3.jpg" />
 
     <title>Gombakvíz</title>
     <script>
