Update OpenGraph tags

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="og:title" content="Gombakvíz!" />
-    <meta name="og:type" content="website" />
+    <meta name="og:description" content="Gombaismereti játék" />
+    <meta name="og:type" content="article" />
+    <meta name="og:locale" content="hu_HU" />
     <meta name="og:url" content="https://ignotus87.github.io/mushroom-quiz/" />
-    <meta name="og:image" content="https://ignotus87.github.io/mushroom-quiz/SpeciesImages/3.jpg" />
+    <meta name="og:image" content="https://ignotus87.github.io/mushroom-quiz/SpeciesImages/4.jpg" />
 
     <title>Gombakvíz</title>
     <script>
