Add facebook app id

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <meta name="og:description" content="Gombaismereti játék" />
     <meta name="og:type" content="article" />
     <meta name="og:locale" content="hu_HU" />
+    <meta name="fb:app_id" content="1085715319440316" />
     <meta name="og:url" content="https://ignotus87.github.io/mushroom-quiz/" />
     <meta name="og:image" content="https://ignotus87.github.io/mushroom-quiz/SpeciesImages/4.jpg" />
 
