Make og:image a property

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang=en>
 <head>
-    <meta name="og:image" content="https://ignotus87.github.io/mushroom-quiz/SpeciesImages/4.jpg" />
+    <meta property="og:image" content="https://ignotus87.github.io/mushroom-quiz/SpeciesImages/4.jpg" />
     <meta name="og:title" content="Gombakvíz!" />
     <meta name="og:description" content="Gombaismereti játék" />
     <meta name="og:type" content="article" />
