Specify OpenGraph tags with property instead of name

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang=en>
 <head>
     <meta property="og:image" content="https://ignotus87.github.io/mushroom-quiz/SpeciesImages/4.jpg" />
-    <meta name="og:title" content="Gombakvíz!" />
-    <meta name="og:description" content="Gombaismereti játék" />
-    <meta name="og:type" content="article" />
-    <meta name="og:locale" content="hu_HU" />
-    <meta name="fb:app_id" content="1085715319440316" />
-    <meta name="og:url" content="https://ignotus87.github.io/mushroom-quiz/" />
+    <meta property="og:title" content="Gombakvíz!" />
+    <meta property="og:description" content="Gombaismereti játék" />
+    <meta property="og:type" content="article" />
+    <meta property="og:locale" content="hu_HU" />
+    <meta property="fb:app_id" content="1085715319440316" />
+    <meta property="og:url" content="https://ignotus87.github.io/mushroom-quiz/" />
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-QETEXVVSYM"></script>
