Move style to separate css file

--- a/index.html
+++ b/index.html
@@ -28,272 +28,7 @@
         var jsons = [];
 
     </script>
-    <style>
-        * {
-            -moz-user-select: -moz-none;
-            -khtml-user-select: none;
-            -webkit-user-select: none;
-            /*
-             Introduced in IE 10.
-             See http://ie.microsoft.com/testdrive/HTML5/msUserSelect/
-           */
-            -ms-user-select: none;
-            user-select: none;
-        }
-
-        h1 {
-            text-align: center;
-        }
-
-        .link {
-            cursor: pointer;
-            text-decoration: underline;
-        }
-
-        .right {
-            color: darkGreen;
-        }
-
-        .wrong {
-            color: red;
-        }
-
-        .table {
-            display: table;
-            margin: 0 auto;
-        }
-
-        ul#horizontal-list {
-            min-width: 696px;
-            list-style: none;
-            padding-top: 20px;
-        }
-
-            ul#horizontal-list li {
-                display: inline;
-            }
-
-        .choice {
-            margin-left: 10px;
-            margin-right: 10px;
-            margin-bottom: 10px;
-            font-size: 1.5em;
-            width: 99%;
-        }
-
-        .puzzle-container {
-            text-align: center;
-        }
-
-        .comment-on-answer {
-            text-align: center;
-            font-size: 2em;
-            background-color: white;
-            z-index: 999;
-        }
-
-        .game-title {
-            font-size: 2em;
-        }
-
-        .float-left {
-            float: left;
-        }
-
-        .float-right {
-            float: right;
-        }
-
-        .title {
-            font-size: 1.3em;
-            font-weight: bold;
-            display: inline-block;
-        }
-
-        .right-selected {
-            background-color: green;
-        }
-
-        .wrong-selected {
-            background-color: red;
-        }
-
-        .carousel-wrapper {
-            display: flex;
-            align-items: center;
-            justify-content: space-evenly;
-        }
-
-        .carousel {
-            width: 90vw;
-            display: flex;
-            overflow-x: scroll;
-            scroll-behavior: smooth;
-            /* use this property to hide the scrollbar on firefox */
-            scrollbar-width: none;
-        }
-
-            /*  use this pseudo class to hide the scrollbar on chrome */
-            .carousel::-webkit-scrollbar {
-                display: none;
-            }
-
-        .item {
-            flex-basis: 100%;
-            flex-shrink: 0;
-            padding: 1rem;
-        }
-
-        .left,
-        .right {
-            border: none;
-            background-color: transparent;
-            cursor: pointer;
-            color: brown;
-            font-size: 5rem;
-            overflow: hidden;
-            z-index: 100;
-        }
-
-        img {
-            max-width: 100%;
-        }
-
-        /* Container holding the image and the text */
-        .puzzle-image-container {
-            margin-left: auto;
-            margin-right: auto;
-            width: auto;
-            position: relative;
-            text-align: center;
-            color: black;
-        }
-
-        .puzzle-image {
-            max-width: 100%;
-            max-height: 500px;
-        }
-
-        /* Centered text */
-        .puzzle-image-text {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: black;
-        }
-
-        .overlay {
-            filter: blur(10px);
-            -webkit-filter: blur(10px);
-            -moz-filter: blur(10px);
-            -o-filter: blur(10px);
-            -ms-filter: blur(10px);
-        }
-
-        .show {
-            display: auto;
-        }
-
-        .hide {
-            display: none !important;
-        }
-
-        .next-button {
-            z-index: 999;
-            font-size: 1.3em;
-        }
-
-        body {
-            background-image: url(Images/background.jpg);
-            display: flex;
-            min-height: 98vh;
-            flex-direction: column;
-            color: black;
-            font-family: Arial, sans-serif;
-        }
-
-        #app {
-            flex-grow: 1;
-        }
-
-        .footer {
-            text-align: center;
-        }
-
-        .header, .header a {
-            color: black;
-            font-family: Arial, sans-serif;
-        }
-
-        .choice-container {
-            display: grid;
-            grid-template-columns: 0.8fr;
-            justify-content: center;
-        }
-
-            .choice-container .choice {
-            }
-
-        .choice {
-            max-width: 95%;
-            margin: 5px;
-        }
-
-        @media (min-width: 768px) {
-            /*For mobile phones */
-            .choice-container {
-                grid-template-columns: 1fr 1fr;
-            }
-        }
-
-        .right-wrong-image {
-            width: 30px;
-        }
-
-        .bootstrap-button {
-            cursor: pointer;
-            outline: 0;
-            display: inline-block;
-            font-weight: 400;
-            line-height: 1.5;
-            text-align: center;
-            background-color: white;
-            border: 1px solid transparent;
-            padding: 6px 12px;
-            font-size: 1rem;
-            border-radius: .25rem;
-            transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-            color: #0d6efd;
-            border-color: #0d6efd;
-        }
-
-            .bootstrap-button:hover {
-                color: #fff;
-                background-color: #0d6efd;
-                border-color: #0d6efd;
-            }
-
-        .navigation-button {
-            text-align: center;
-            position: relative;
-        }
-
-        .dot {
-            cursor: pointer;
-            height: 15px;
-            width: 15px;
-            margin: 0 2px;
-            background-color: #bbb;
-            border-radius: 50%;
-            display: inline-block;
-        }
-
-            .active,
-            .dot:hover {
-                background-color: #717171;
-            }
-    </style>
+    <link rel="stylesheet" href="Style/app.css" />
 </head>
 
 <body>
