--- a/index.html
+++ b/index.html
@@ -54,8 +54,22 @@
                     <span v-html="commentToShow"></span>
                     <div>
                         <button class="bootstrap-button next-button " :class="{ 'show': isAnswered && !isEndOfGame, 'hide': !isAnswered  || isEndOfGame }" @click="continueAfterAnswer()">{{ nextButtonText }}</button>
-                        <button class="bootstrap-button" :class="{ 'show': isEndOfGame, 'hide': !isEndOfGame }" @click="reset10()">Új játék (10 kérdés)</button>
-                        <button class="bootstrap-button" :class="{ 'show': isEndOfGame, 'hide': !isEndOfGame }" @click="resetAll()">Új játék (összes faj [{{ totalSpeciesCount }}])</button>
+
+                        <div :class="{ 'show': isEndOfGame, 'hide': !isEndOfGame }">
+                            <div>
+                                <fieldset class="radio-toolbar">
+                                    <legend>Nehézség:</legend>
+                                    <input type="radio" id="difficulty-beginner" name="difficulty" v-model="difficulty" value="beginner" :checked="isBeginner" />
+                                    <label for="difficulty-beginner">kezdő</label>
+                                    <input type="radio" id="difficulty-advanced" name="difficulty" v-model="difficulty" value="advanced" :checked="isAdvanced" />
+                                    <label for="difficulty-advanced">haladó</label>
+                                </fieldset>
+                            </div>
+                            <div>
+                                <button class="bootstrap-button" :class="{ 'show': isEndOfGame, 'hide': !isEndOfGame }" @click="reset10()">Új játék (10 kérdés)</button>
+                                <button class="bootstrap-button" :class="{ 'show': isEndOfGame, 'hide': !isEndOfGame }" @click="resetAll()">Új játék (összes faj [{{ totalSpeciesCount }}])</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
