Fix footer align

--- a/index.html
+++ b/index.html
@@ -122,16 +122,20 @@
     </div>
 
     <div class="footer">
-        Background by <a href="https://www.freepik.com/free-vector/school-fishes-background-with-deep-sea_2235607.htm#query=fish%20background&position=10&from_view=keyword&track=ais" target="_blank">Freepik</a>
+        <div class="flex-container">
+            <div id="visitor-counter">
+                <a href='http://www.freevisitorcounters.com'>Freevisitorcounters</a>
+                <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=3d52bcb9540e6b8b3049a1a51e514ac70e8666ea'></script>
+                <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1266216/t/4"></script>
+            </div>
+
+            <div id="background-credits">
+                Background by <a href="https://www.freepik.com/free-vector/school-fishes-background-with-deep-sea_2235607.htm#query=fish%20background&position=10&from_view=keyword&track=ais" target="_blank">Freepik</a>
+            </div>
+        </div>
     </div>
 
     <script type="module" src="./selectNameByImage.js"></script>
-
-    <div id="visitor-counter">
-        <a href='http://www.freevisitorcounters.com'>Freevisitorcounters</a>
-        <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=3d52bcb9540e6b8b3049a1a51e514ac70e8666ea'></script>
-        <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1266216/t/4"></script>
-    </div>
 </body>
 
 </html>
